--- a/po/fi.po
+++ b/po/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-03-26 22:28-0400\n"
-"PO-Revision-Date: 2013-03-27 12:28+0000\n"
+"PO-Revision-Date: 2013-03-29 10:51+0000\n"
 "Last-Translator: Pasi Lallinaho <pasi@shimmerproject.org>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-28 05:11+0000\n"
+"X-Launchpad-Export-Date: 2013-03-30 05:52+0000\n"
 "X-Generator: Launchpad (build 16546)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
@@ -176,11 +176,11 @@ msgstr "<b>Sovelluksen asetukset</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Run in terminal"
-msgstr "Aja pääteohjelmassa."
+msgstr "Aja päätteessä"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
-msgstr ""
+msgstr "Käytä käytnnistyksen huomautusta"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Hide from menus"
@@ -200,7 +200,7 @@ msgstr "Poista tämä käynnistin..."
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "<small>Filename</small>"
-msgstr ""
+msgstr "<small>Tiedoston nimi</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:47 ../menulibre/MenulibreWindow.py:68
 msgid "Accessories"
@@ -256,11 +256,11 @@ msgstr "Yleiset asetukset"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Quicklists"
-msgstr ""
+msgstr "Pikavalikot"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "Editor"
-msgstr ""
+msgstr "Tekstieditori"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Application Settings"
@@ -279,7 +279,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreWindow.py:65
 msgid "Other"
-msgstr ""
+msgstr "Muut"
 
 #: ../menulibre/MenulibreWindow.py:207
 msgid "Show"
@@ -316,6 +316,8 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "This cannot be undone."
 msgstr ""
+"Oletko varma että haluat poistaa käynnistimen \"%s\"?\n"
+"Tätä toimintoa ei voi kumota."
 
 #: ../menulibre/MenulibreWindow.py:506
 #, python-format
@@ -339,7 +341,7 @@ msgstr "Valitse suoritettava kohde"
 
 #: ../menulibre/MenulibreWindow.py:845
 msgid "NewShortcut"
-msgstr ""
+msgstr "UusiPikakuvake"
 
 #: ../menulibre/MenulibreWindow.py:847
 msgid "New Shortcut"
@@ -389,7 +391,7 @@ msgstr "'%s' ei ole .desktop -tiedosto"
 
 #: ../menulibre_lib/MenulibreXdg.py:174
 msgid "Initialized without required parameters."
-msgstr ""
+msgstr "Alustettu ilman vaadittavia parametrejä."
 
 #: ../menulibre_lib/MenulibreXdg.py:183
 #, python-format
@@ -399,6 +401,7 @@ msgstr "'%s' ei ole .directory -tiedosto"
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
 msgstr ""
+"Näytä virheilmoitukset (-vv näyttää myös menulibre_libin virheilmoitukset)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -406,12 +409,12 @@ msgstr "Valikkomuokkain"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr ""
+msgstr "Muokkaa järjestelmä- ja käyttävalikoita helposti"
 
 #: ../menulibre.desktop.in.h:3
 msgid "Edit user menus"
-msgstr ""
+msgstr "Muokkaa käyttäjävalikoita"
 
 #: ../menulibre.desktop.in.h:4
 msgid "Edit system menus"
-msgstr ""
+msgstr "Muokkaa järjestelmävalikoita"
