--- a/po/ru.po
+++ b/po/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-03-26 22:28-0400\n"
-"PO-Revision-Date: 2013-04-02 15:39+0000\n"
+"PO-Revision-Date: 2013-04-05 22:02+0000\n"
 "Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-03 05:47+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-06 06:09+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
@@ -135,7 +135,7 @@ msgstr "Приложение"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "Categories"
-msgstr ""
+msgstr "Категории"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Applications"
@@ -350,7 +350,7 @@ msgstr "Все приложения"
 
 #: ../menulibre/MenulibreWindow.py:1393
 msgid "Add a new application launcher"
-msgstr ""
+msgstr "Добавить новую кнопку запуска"
 
 #: ../menulibre/MenulibreWindow.py:1687
 msgid "Search Results"
