--- a/po/cs.po
+++ b/po/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-03-26 22:28-0400\n"
-"PO-Revision-Date: 2013-04-10 15:07+0000\n"
+"PO-Revision-Date: 2013-04-12 20:41+0000\n"
 "Last-Translator: aloisam <a.musil@email.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-11 05:29+0000\n"
-"X-Generator: Launchpad (build 16550)\n"
+"X-Launchpad-Export-Date: 2013-04-13 05:55+0000\n"
+"X-Generator: Launchpad (build 16564)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
@@ -123,7 +123,7 @@ msgstr "Vrátit všechny změny k poslednímu uloženému stavu"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Revert"
-msgstr "Vrátit zpět"
+msgstr "Vrátit změny"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Category"
