--- a/po/cs.po
+++ b/po/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-03-26 22:28-0400\n"
-"PO-Revision-Date: 2013-04-12 20:41+0000\n"
+"PO-Revision-Date: 2013-04-13 09:15+0000\n"
 "Last-Translator: aloisam <a.musil@email.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-13 05:55+0000\n"
+"X-Launchpad-Export-Date: 2013-04-14 05:33+0000\n"
 "X-Generator: Launchpad (build 16564)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
@@ -223,7 +223,7 @@ msgstr "Grafika"
 
 #: ../data/ui/MenulibreWindow.ui.h:52 ../menulibre/MenulibreWindow.py:63
 msgid "Internet"
-msgstr "internetové připojení"
+msgstr "Internet"
 
 #: ../data/ui/MenulibreWindow.ui.h:53 ../menulibre/MenulibreWindow.py:58
 msgid "Multimedia"
@@ -255,7 +255,7 @@ msgstr "Obecná nastavení"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Quicklists"
-msgstr "Quicklists"
+msgstr "Podnabídky"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "Editor"
@@ -383,12 +383,11 @@ msgstr ""
 "# ve znění zveřejněném Free Software Foundation.\n"
 "# \n"
 "# Tento program je šířen s nadějí, že bude užitečný, ale \n"
-"# BEZ JAKÉKOLIV ZÁRUKY; without even the implied warranties of \n"
-"# OBCHODOVATELNOSTI, USPOKOJIVÉ KVALITY, nebo VHODNOSTI PRO URČITÝ \n"
-"# ÚČEL. Podrobnosti najdete v GNU GPL (všeobecné veřejné licenci GNU).\n"
+"# BEZ JAKÉKOLIV ZÁRUKY; a to dokonce i bez předpokládaných záruk \n"
+"# OBCHODOVATELNOSTI, USPOKOJIVÉ KVALITY, nebo VHODNOSTI PRO \n"
+"# URČITÝ ÚČEL. Podrobnosti najdete v GNU GPL.\n"
 "# \n"
-"# Spolu s tímto programem by jste měli obdržet kopii GNU GPL (všeobecné "
-"veřejné licence GNU).\n"
+"# Spolu s tímto programem by jste měli obdržet kopii GNU GPL.\n"
 "# Pokud se tak nestalo, najdete ji na <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre_lib/MenulibreXdg.py:45
@@ -415,7 +414,7 @@ msgstr "Ukázat ladící zprávy (-vv debugs menulibre_lib also)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Menu editor"
+msgstr "MenuLibre"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
