--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.1) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 15 Apr 2013 22:47:46 -0400
+
 menulibre (13.04ubuntu1) UNRELEASED; urgency=low
 
   * Merge language updates
