--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.3) raring; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 15 Apr 2013 22:50:03 -0400
+
 menulibre (13.04.2) quantal; urgency=low
 
   * New release.
